[project]
name = "job-agent"
version = "0.1.1"
description = "Job Agent CLI MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pymupdf>=1.23",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
jobagent = "jobagent.cli:main"
job-agent = "jobagent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jobagent*"]
